--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -17,13 +17,6 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Pipeline check
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Check code
-      run: |
-        make install check-code
-    - name: Test
-      run: |
-        make install unit-test integration-test
+        make pipeline
