--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.2.0",
+    "bulma": "^0.8.0",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
@@ -22,8 +22,12 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "babel-eslint": "^10.0.3",
+    "css-loader": "^3.4.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.2",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
