--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^4.4.1",
     "bulma": "^0.8.0",
     "core-js": "^3.4.4",
+    "js-cookie": "^2.2.1",
     "vue": "^2.6.10",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
@@ -26,7 +28,7 @@
     "css-loader": "^3.4.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10"
