--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,8 @@
     "bootstrap": "^4.4.1",
     "bulma": "^0.8.0",
     "core-js": "^3.4.4",
-    "js-cookie": "^2.2.1",
     "vue": "^2.6.10",
+    "vue-cookies": "^1.6.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
