6. Initial work for Docker

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,16 +1,15 @@
-FROM node:lts-alpine
-
-RUN npm install -g http-server
-
+# build stage
+FROM node:lts-alpine as build-stage
+LABEL maintainer="Enrique Matta <enrique@matta.dev>"
 WORKDIR /app
-
 COPY package*.json ./
-
 RUN npm install
-
 COPY . .
-
 RUN npm run build
 
-EXPOSE 8080
-CMD [ "http-server", "dist" ]
+# Production stage
+FROM nginx:1.16.1-alpine as production-stage
+LABEL maintainer="Enrique Matta <enrique@matta.dev>"
+COPY --from=build-stage /app/dist /usr/share/nginx/html
+EXPOSE 80
+CMD [ "nginx", "-g", "daemon off;"]
