--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-cookies": "^1.6.1",
+    "vue-lodash": "^2.0.2",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
